--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="assets/styles.css">
 <link rel="icon" href="images/logo.png">
 <meta name="data-ein" content="871023753">
+<meta name="facebook-domain-verification" content="7tny0hi0rm72ofd3rar7r8mmaoql5e" />
 <meta name="data-name" content="CIVIC LEADERSHIP ACADEMY">
 <meta name="data-email" content="contact@civicleadership.netyra2812.shop">
 <meta name="data-phone" content="+18352141570">
